county issues updated

--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -151,6 +151,15 @@
                         industrial districts. Extending it is proposed to have an effect in which trucks delivering
                         goods via route 55 would have easier access to the business and industrial districts, which might reduce transportation costs,
                         which could help overall business in the county.
+
+                        <div class="video-box-sm">
+                            <iframe src="https://www.youtube.com/embed/H2rQvSNB9lk?si=yTAoPWGzAmPxAQW-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <h3 class="video-heading-sm">Interview with Albert Harshaw</h3>
+                            <div class="video-sm-desc">
+                                Here is a short description about the video.
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div class="issues-card">
@@ -214,13 +223,15 @@
                     <div class="issues-sub-content">
                         Much like homelessness, crime seems to be a growing problem in the county.
                         With discussion of gangs in Bridgeton regularly occurring at county meetings,
-                        what are our candidates planning to do to handle crime?
+                        what are our candidates planning to do to handle crime? Furthermore, it has recently 
+                        been stated that immigration has brought MS-13 members into the county... will this also 
+                        contribute to crime?
                     </div>
                 </div>        
             </div>
             <br>
             <br>
-            <div class="issues-content">
+            <!-- <div class="issues-content">
                 <h3 class="issues-heading">State Level Issues</h3>
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Immigration – Sanctuary State Status</h5>
@@ -306,7 +317,7 @@
                         issue?
                     </div>
                 </div>       
-            </div>
+            </div> -->
             
         </div>
     </div>
