us senate issues and rewording of house of rep issues

--- a/child_pages/cc-elections/us_house_of_reps_issues.html
+++ b/child_pages/cc-elections/us_house_of_reps_issues.html
@@ -58,11 +58,9 @@
                     <div class="issues-sub-content">
                         The district has been facing economic challenges, particularly in areas heavily dependent on seasonal tourism and agriculture. Job creation efforts 
                         are crucial to provide stable employment opportunities year-round. For example, once a thriving hub for tourism and casinos, Atlantic City has 
-                        experienced economic decline. Initiatives to diversify the local economy and attract new industries are vital. Also, Many small businesses in the 
-                        district have been affected by the COVID-19 pandemic. Known for its agricultural output, Vineland benefits from programs that support local farmers and 
-                        promote agri-business. Millville is also in the process of economic development with efforts such as the Nabb Ave. extension to help its industrial area. 
-                        Supporting these businesses is essential for economic recovery. A pro-active congressman would help find and acquire federal funding for economic 
-                        development in the district.
+                        experienced economic decline. Initiatives to diversify the local economy and attract new industries are vital. Also, many small businesses in the 
+                        district have been affected by the COVID-19 pandemic. How will the candidates ensure that the district will grow so its residents can prosper 
+                        economically?
                     </div>
                 </div>
                 <div class="issues-card">
@@ -71,7 +69,7 @@
                         Both rural and urban areas within the district face challenges in accessing affordable healthcare services. Residents often have to travel long distances 
                         to access specialized healthcare services, making the expansion of local healthcare facilities a priority. Also, The district has been significantly 
                         impacted by the opioid epidemic, necessitating robust public health responses. High rates of opioid addiction require increased funding for treatment 
-                        centers and prevention programs.
+                        centers and prevention programs. How will the candidates address these and/or other healthcare concerns?
                     </div>
                 </div>
                 <div class="issues-card">
@@ -79,38 +77,33 @@
                     <div class="issues-sub-content">
                         The district's extensive coastline makes it vulnerable to climate change and sea-level rise, impacting both the environment and local economies 
                         dependent on tourism and fishing. Towns like Ocean City and Longport are dealing with frequent flooding and beach erosion, requiring investment in 
-                        coastal defense and resilience projects. Also, Local waterways suffer from pollution, affecting both public health and the environment.
-                        Pollution and habitat destruction in the bay affect local fisheries and wildlife.
+                        coastal defense and resilience projects. Also, local waterways suffer from pollution, affecting both public health and the environment.
+                        Pollution and habitat destruction in the bay affect local fisheries and wildlife. How will the candidates handle these and/or other environmental 
+                        concerns?
                     </div>
                 </div>
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Education</h5>
                     <div class="issues-sub-content">
-                        Adequate funding is necessary to ensure quality education in both urban and rural schools within the district. Schools in Millville face challenges 
-                        with funding and resources, impacting the quality of education.
+                        Adequate funding is necessary to ensure quality education in both urban and rural schools within the district. Schools in areas like Millville face challenges 
+                        with funding and resources, impacting the quality of education. What is the plan for the candidates in regards to educational success in the district?
                     </div>
                 </div>
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Veterans' Services</h5>
                     <div class="issues-sub-content">
                         The district has a significant veteran population requiring access to healthcare, job training, and other support services. 
-                        The presence of the Atlantic City Air National Guard Base highlights the need for comprehensive veterans’ services in the area.
-                    </div>
-                </div>
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Veterans' Services</h5>
-                    <div class="issues-sub-content">
-                        The district has a significant veteran population requiring access to healthcare, job training, and other support services. 
-                        The presence of the Atlantic City Air National Guard Base highlights the need for comprehensive veterans’ services in the area.
+                        The presence of the Atlantic City Air National Guard Base highlights the need for comprehensive veterans’ services in the area. How will the 
+                        candidates handle veterans' affairs?
                     </div>
                 </div>
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Agriculture and Fisheries</h5>
                     <div class="issues-sub-content">
                         Agriculture and fisheries are important to the local economy, and these sectors need support to remain viable.
-                        Vineland and Hammontonare major producers of fruits and vegetables, benefiting from agricultural subsidies and support programs.
+                        Vineland and Hammonton are major producers of fruits and vegetables, benefiting from agricultural subsidies and support programs.
                         The Cape May fishing industry is one of the leading ports for commercial fishing on the East Coast, facing challenges from regulatory changes and environmental 
-                        issues.
+                        issues. How will the candidates support local agriculture and fisheries?
                     </div>
                 </div>
                 <div class="issues-card">
@@ -120,20 +113,21 @@
                         The Garden State Parkway requires frequent repairs and updates are necessary to accommodate the heavy traffic, especially during tourist season.
                         Expanding public transportation options can improve accessibility and reduce traffic congestion.
                         South Jersey is an overlooked area in regards to the transportation authority despite southern New Jersey residents being required to pay related taxes.
+                        What are the candidates' plans to address local transportation issues?
                     </div>
                 </div>
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Community Safety</h5>
                     <div class="issues-sub-content">
                         Local law enforcement agencies are desperate for resources and personnel. Areas like Atlantic City and Bridgeton are dealing with high levels of crime and 
-                        struggle to keep the community safe.
+                        struggle to keep the community safe. How will the candidates handle improving local safety?
                     </div>
                 </div>
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Housing</h5>
                     <div class="issues-sub-content">
                         Many residents face challenges finding affordable housing, impacting overall quality of life.
-                        Programs to prevent homelessness and support those at risk are essential.
+                        Programs to prevent homelessness and support those at risk are essential. How will the candidates improve local housing?
                     </div>
                 </div>
                 <div class="issues-card">
@@ -142,7 +136,8 @@
                         Tourism is a major economic driver in the district, requiring ongoing promotion and development.
                         Cape May is a popular tourist destination known for its historic sites and beaches, requiring investment in tourism infrastructure.
                         Also, protecting and promoting historical sites enhances community pride and attracts visitors.
-                        The Pine Barrens could benefit from promoting ecotourism and recreational activities in this unique natural area.
+                        The Pine Barrens could benefit from promoting ecotourism and recreational activities in this unique natural area. What are the candidates plans for 
+                        working on local tourism and recreation?
                     </div>
                 </div>
             </div>            
