issues updates and salerno agenda link added

--- a/child_pages/cc-elections/Candidates/salerno.html
+++ b/child_pages/cc-elections/Candidates/salerno.html
@@ -87,7 +87,8 @@
 
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                
+                <p><a href="https://joesalernoforcongress.com/priorities/" target="_blank" rel="noopener noreferrer" class="website-link">Priorities page from personal site</a></p>
+                <br>
                 <ul>
                     <li>Wants to protect reproductive rights.</li>
                     <li>Wants tax credits to incentivize bringing manufacturing back to the US.</li>
