--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -227,7 +227,18 @@
                         been stated that immigration has brought MS-13 members into the county... will this also 
                         contribute to crime?
                     </div>
-                </div>        
+                </div> 
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Veterans' Affairs</h5>
+                    <div class="issues-sub-content">
+                        The handling of veterans' affairs continues to be a problem throughout the country. While there is a lot of overlap among county commissioners, 
+                        congressmen, and US senators while addressing tasks associated with veterans, there are some responsibilities which are specific to the county level.
+                        Commissioners are responsible for things such as local services coordination, like overseeing the county veterans' cemetery, veterans ID card issuances, 
+                        and being a liaison between veterans associations and the government. 
+                        Being liaisons, commissioners should provide service referalls for local veterans and advocate for policies which would help local veterans. What visions 
+                        do the candidates have to ensure our veterans will be taken care of moving forward?
+                    </div>
+                </div>              
             </div>
             <br>
             <br>
