more updates to salerno and van drew pages

--- a/child_pages/cc-elections/Candidates/salerno.html
+++ b/child_pages/cc-elections/Candidates/salerno.html
@@ -54,8 +54,11 @@
                 instead of keeping the constituents of South Jersey as the top priority. Scrolling through his 
                 <a href="https://www.facebook.com/JoeSalernoforCongress" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook page</a> shows 
                 many direct attack ads in that vein.
-                He has a bunch of agenda items such as protecting 
-                reproductive rights, instituting tax credits to bring manufacturing back, protecting social security, and more.
+                He has a bunch of agenda items such as protecting reproductive rights, instituting tax credits to bring manufacturing back, protecting social security, and more.
+                While it is understandable that left leaning people like Salerno might not like Van Drew's political alignments and voting record, Van Drew has decades of political 
+                experience, with about 5 years specific experience as a US Congressman, while Salerno apparently has no direct political experience. With that in mind, it is the 
+                opinion of InformTheVote that more discussion is necessary regarding how Salerno intends on implementing his agenda in a way that is significantly different or 
+                better than Van Drew, as opposed to simply attacking Van Drew.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
