--- a/child_pages/cc-elections/Candidates/van_drew.html
+++ b/child_pages/cc-elections/Candidates/van_drew.html
@@ -102,12 +102,17 @@
                     <a href="https://vandrew.house.gov/issues/issue/?IssueID=14997" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
                         <li>Focus on affordability of education.</li>
                         <a href="https://vandrew.house.gov/issues/issue/?IssueID=73" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
-
+                            <li>Wants US energy independence.</li>
+                        <a href="https://vandrew.house.gov/issues/issue/?IssueID=10177" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
                         <li>Supports for the Lower Energy Costs Act to increase domestic energy production and reduce permitting restrictions​ .</li>
                     <li>Emphasizes fiscal responsibility, including opposition to policies that increase the federal debt limit without significant reforms.</li>
                     <li>Strong stance against the implementation of socialist policies in the United States​.</li>
                     <li>Advocates for reforms in healthcare to make it more affordable and accessible for constituents.</li>
+                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=74" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
+                        <li>Immigration reform based on securing the border, fair employment practices, and helping law-abiding immigrant families.</li>
+                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=10360" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
                     <li>Commitment to improving services and support for veterans, including healthcare and employment opportunities</li>
+                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=14998" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
                     <li>Focus on improving local infrastructure to support economic development and enhance community well-being​</li>
                     <li>Support for policies that strengthen national security and ensure the safety of American citizens​ .</li>
                     <li>Advocacy for policies that benefit local farmers and the agricultural sector in South Jersey</li>
@@ -119,9 +124,32 @@
 
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
-                Candidate Salerno is a successful businessman with degrees in engineering and law.
+                <ul>
+                    <li>NJ General Assembly 2002-2008, Legislative District 1</li>
+                    <li>NJ State Senate 2008-2019, Legislative District 1</li>
+                    <li>US House of Representatives 2019-present</li>
+                </ul>
             </div>
             
+            <br>
+            <br>
+
+            <h4 class="sub-heading">Voting record</h4>
+            <div class="experience">
+                <ul>
+                    <li>Voted against the impeachment of President Donald Trump, which led to his switch from the Democratic Party to the Republican Party.</li>
+                    <li>Supported the Lower Energy Costs Act (H.R. 1), which aimed to increase domestic energy production and reduce permitting restrictions for energy projects​</li>
+                    <li>Voted in favor of the Providing for congressional disapproval under chapter 8 of title 5, United States Code, of the rule submitted by the Department 
+                        of Labor relating to "Prudence and Loyalty in Selecting Plan Investments and Exercising Shareholder Rights" (H.J.Res. 30), which sought to nullify a 
+                        Department of Labor rule allowing retirement plans to consider environmental, social, and corporate governance (ESG) factors in investment decisions​</li>
+                    <li>Supported the resolution Relating to a national emergency declared by the President on March 13, 2020 (H.J.Res. 7), which ended the national 
+                            coronavirus state of emergency​ </li>
+                    <li>Voted against the Fiscal Responsibility Act of 2023 (H.R. 3746), which raised the federal debt limit and implemented spending caps and other 
+                        financial measures​ </li>
+                    <li>Supported the resolution Denouncing the horrors of socialism (H.Con.Res. 9), opposing the implementation of socialist policies in the United States​</li>
+                    <li>Voted in favor of the Born-Alive Abortion Survivors Protection Act (H.R. 26), which aimed to protect infants who survive abortions</li>
+                </ul>
+            </div>
 
     </div>
  </div>   
