link fixes on van drew page

--- a/child_pages/cc-elections/Candidates/van_drew.html
+++ b/child_pages/cc-elections/Candidates/van_drew.html
@@ -99,20 +99,20 @@
                 <br>
                 <ul>
                     <li>Focus on bringing economic growth and good jobs to South Jersey​.</li>
-                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=14997" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
+                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=14997" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website</a>
                         <li>Focus on affordability of education.</li>
-                        <a href="https://vandrew.house.gov/issues/issue/?IssueID=73" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
+                        <a href="https://vandrew.house.gov/issues/issue/?IssueID=73" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website</a>
                             <li>Wants US energy independence.</li>
-                        <a href="https://vandrew.house.gov/issues/issue/?IssueID=10177" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
+                        <a href="https://vandrew.house.gov/issues/issue/?IssueID=10177" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website</a>
                         <li>Supports for the Lower Energy Costs Act to increase domestic energy production and reduce permitting restrictions​ .</li>
                     <li>Emphasizes fiscal responsibility, including opposition to policies that increase the federal debt limit without significant reforms.</li>
                     <li>Strong stance against the implementation of socialist policies in the United States​.</li>
                     <li>Advocates for reforms in healthcare to make it more affordable and accessible for constituents.</li>
-                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=74" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
+                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=74" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website</a>
                         <li>Immigration reform based on securing the border, fair employment practices, and helping law-abiding immigrant families.</li>
-                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=10360" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
+                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=10360" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website</a>
                     <li>Commitment to improving services and support for veterans, including healthcare and employment opportunities</li>
-                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=14998" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website/a>
+                    <a href="https://vandrew.house.gov/issues/issue/?IssueID=14998" target="_blank" rel="noopener noreferrer" class="website-link">Issue page from personal website</a>
                     <li>Focus on improving local infrastructure to support economic development and enhance community well-being​</li>
                     <li>Support for policies that strengthen national security and ensure the safety of American citizens​ .</li>
                     <li>Advocacy for policies that benefit local farmers and the agricultural sector in South Jersey</li>
