updates to vice president ballot page

--- a/child_pages/cc-elections/cc_vice_president_2024.html
+++ b/child_pages/cc-elections/cc_vice_president_2024.html
@@ -54,10 +54,10 @@
           <h6 class="page-title">US Vice President</h6>
           <p>
             <a href="Candidates/vance.html">J.D. Vance</a> has been chosen by Trump, probably to entice people who are further right than Trump. 
-            <a href="Candidates/harris.html">Kamala Harris</a>, the incumbent Vice President, might be running for president, but we are unsure at the moment as Biden just dropped 
-            out of the race. Finally, attorney and tech entrepreneur <a href="Candidates/shanahan.html">Nicole Shanahan</a> is Kennedy's running mate. NOTE: The president and vice president 
-            candidates run as a pair, so you will not literally choose them as individuals. We have only put the vice president candidates on a ballot page to follow the format of the site so 
-            you can easily navigate the information.
+            As of today, July 25th, we are not quite sure what is going on with the Democrat party in terms of firm nominations for president and vice president. Finally, attorney 
+            and tech entrepreneur <a href="Candidates/shanahan.html">Nicole Shanahan</a> is Kennedy's running mate. NOTE: The president and vice president 
+            candidates run as a pair, so you will not literally choose them as individuals. We have only put the vice president candidates on a ballot page to follow the format of 
+            the site so you can easily navigate the information.
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
@@ -116,7 +116,7 @@
                             
                         </div>
                         <div class="first-name">
-                            <a href="Candidates/harris.html">Kamala</a>
+                            <a href="#">??</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>1A</p>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name  push-down-last-name">
-                            <a href="Candidates/harris.html">Harris</a>
+                            <a href="#">??</a>
                         </div>
                     </div>
 
