added animated buttons to banner on hp

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                 Further testing 
             </div>
             <div class="cta-link-box">
-                 <a href="child_pages/get-involved.html" id='videoSummary' class="cta-link">Video Summary</a>
-                 <a href="#" id='actualVideo' class="cta-link">Video</a>
+                 <a href="child_pages/get-involved.html" id='videoSummary' class="cta-link"><button class="hp-banner-button">Video Summary</button></a>
+                 <a href="#" id='actualVideo' class="cta-link"><button class="hp-banner-button">Video</button></a>
             </div>
         </div>
 
