van drew update

--- a/child_pages/cc-elections/Candidates/van_drew.html
+++ b/child_pages/cc-elections/Candidates/van_drew.html
@@ -134,7 +134,7 @@
             <br>
             <br>
 
-            <h4 class="sub-heading">Voting record</h4>
+            <h4 class="sub-heading">Partial Voting record</h4>
             <div class="experience">
                 <ul>
                     <li>Voted against the impeachment of President Donald Trump, which led to his switch from the Democratic Party to the Republican Party.</li>
@@ -148,6 +148,17 @@
                         financial measures​ </li>
                     <li>Supported the resolution Denouncing the horrors of socialism (H.Con.Res. 9), opposing the implementation of socialist policies in the United States​</li>
                     <li>Voted in favor of the Born-Alive Abortion Survivors Protection Act (H.R. 26), which aimed to protect infants who survive abortions</li>
+                    <li>Improving Access to Our Courts Act: Voted Yes, and the bill passed the House on July 23, 2024​ <a href="https://justfacts.votesmart.org/candidate/key-votes/24685/jeff-van-drew" target="_blank" rel="noopener noreferrer" class="website-link">VoteSmart</a>​</li>
+
+                    <li>Victims' VOICES Act: Voted Yes, and the bill passed the House on July 23, 2024 (408-2)<a href="https://justfacts.votesmart.org/candidate/key-votes/24685/jeff-van-drew" target="_blank" rel="noopener noreferrer" class="website-link">VoteSmart</a>​</li>
+                    <li>Protecting and Enhancing Public Access to Codes (Pro Codes) Act: Voted Yes, but the bill failed in the House on July 22, 2024 (248-127).<a href="https://justfacts.votesmart.org/candidate/key-votes/24685/jeff-van-drew" target="_blank" rel="noopener noreferrer" class="website-link">VoteSmart</a>​</li>
+                    <li>Water Resources Development Act of 2024: Voted Yes, and the bill passed the House on July 22, 2024 (359-13)​ <a href="https://justfacts.votesmart.org/candidate/key-votes/24685/jeff-van-drew" target="_blank" rel="noopener noreferrer" class="website-link">VoteSmart</a>​</li>
+                    <li>Providing for congressional disapproval of a rule by the Department of Education on nondiscrimination based on sex in education programs: Voted Yes, and the joint resolution passed the House on July 11, 2024 (210-205)​ <a href="https://justfacts.votesmart.org/candidate/key-votes/24685/jeff-van-drew" target="_blank" rel="noopener noreferrer" class="website-link">VoteSmart</a>​</li>
+                    <li>Finding Attorney General Merrick Garland in contempt of the House: Voted Yes, but the resolution failed on July 11, 2024 (204-210)​ <a href="https://justfacts.votesmart.org/candidate/key-votes/24685/jeff-van-drew" target="_blank" rel="noopener noreferrer" class="website-link">VoteSmart</a>​</li>
+                    <li>Legislative Branch Appropriations Act, 2025: Voted Yes, but the bill failed on July 11, 2024 (205-213)<a href="https://justfacts.votesmart.org/candidate/key-votes/24685/jeff-van-drew" target="_blank" rel="noopener noreferrer" class="website-link">VoteSmart</a>​</li>
+                    <li>Safeguard American Voter Eligibility Act: Voted Yes, and the bill passed the House on July 10, 2024 (221-198)<a href="https://justfacts.votesmart.org/candidate/key-votes/24685/jeff-van-drew" target="_blank" rel="noopener noreferrer" class="website-link">VoteSmart</a>​</li>
+
+                    
                 </ul>
             </div>
 
