get involved update, WIP

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -68,23 +68,24 @@
                         <li class="gl-li">
                             <strong>Study the Candidates:</strong> The most straightforward way to understand who's running and what 
                             they stand for is by checking out our consolidated Candidates page. To our knowledge, this is the most 
-                            efficient means to learn about the candidates. Also, be sure to pro-actively follow the candidates on 
-                            social media to stay up to date. And by pro-actively I mean set aside time once every few weeks to check
+                            efficient means to learn about local candidates. We've included the elections that are more statewide and national,
+                            as they are related to local elections, and why not have as much info on one consolidated website? Also, be sure to pro-actively 
+                            follow the candidates on social media to stay up to date. And by pro-actively I mean set aside time once every few weeks to check
                             their pages, because simply clicking the follow buttons may lead to posts getting lost in the clutter, or
                             even missing shadow-banned posts.
                             <br>
                             <br>
-                            <center><a href="cc-elections/cc_demprimary_county_commissioner_2024.html">County Commissioner Democrat Primary.</a></center> 
+                            <center><a href="cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioner Election</a></center> 
                             <br>
-                            <center><a href="cc-elections/us_demprimary_senate.html">US Senate Democrat Primary.</a></center> 
+                            <center><a href="cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk Election</a></center> 
                             <br>
-                            <center><a href="cc-elections/us_repubprimary_senate.html">US Senate Republican Primary.</a></center> 
+                            <center><a href="cc-elections/us_house_of_representatives_2024.html">US House of Representatives Election</a></center> 
                             <br>
-                            <center><a href="cc-elections/us_houseofrepresentatives_demprimary.html">US House of Representatives Democrat Primary.</a></center> 
+                            <center><a href="cc-elections/us_senate_2024.html">US Senate Election</a></center> 
                             <br>
-                            <center><a href="cc-elections/us_president_demprimary.html">US President Democrat Primary.</a></center> 
+                            <center><a href="cc-elections/cc_vice_president_2024.html">US Vice President Nominees Information</a></center> 
                             <br>
-                            
+                            <center><a href="cc-elections/us_president_2024.html">US President Election</a></center> 
                         </li>
                         <li class="gl-li">
                             <strong>Internalize the Popular Issues:</strong> Before you can assess a candidate's suitability, you need 
@@ -93,8 +94,17 @@
                             understand what matters most to you. 
                             <br>
                             <br>
-                            <center><a href="/child_pages/cc-elections/cc_election_issues.html">County and State Issues.</a></center>
+                            <center><a href="/child_pages/cc-elections/cc_election_issues.html">County and State Issues</a></center>
                             <br>
+                            <center><a href="/child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></center>
+                            <br>
+                            <center><a href="/child_pages/cc-elections/us_house_of_reps_issues.html">US House of Representatives Issues</a></center>
+                            <br>
+                            <center><a href="/child_pages/cc-elections/us_senate_issues.html">US Senate Issues</a></center>
+                            <br>
+                            <center><a href="/child_pages/cc-elections/us_vice_president_issues.html">US Vice President Issues</a></center>
+                            <br>
+                            <center><a href="/child_pages/cc-elections/us_president_issues.html">US President Issues</a></center>
                             
                         </li>
                         <li class="gl-li">
